maquetado y estilado de productos (#1)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Academlo Store</title>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+
 </head>
 <body>
 
@@ -38,5 +42,106 @@
         </g>
     </svg>
     -->
+
+
+
+    <!-- PARTE LAUTHER -->
+
+    <section class="contenedor-categorias" id="contenedor-categorias">
+        <button class="btn all-products" id="all-products">
+          <h2>Show All</h2> 
+          <p>show all products</p>  
+        </button>
+        <div class="separador-btn"></div>
+        <button class="btn hoodies" id="hoodies">
+          <h2>Hoodies</h2> 
+          <p>3 products</p>
+        </button>
+        <div class="separador-btn"></div>
+        <button class="btn shirts" id="shirts">
+          <h2>Shirts</h2> 
+          <p>4 prooducts</p> 
+        </button>
+        <div class="separador-btn"></div>
+        <button class="btn sweatshirts" id="sweatshirts">
+          <h2>Sweatshirts</h2>
+          <p>4 products</p> 
+        </button>
+        <div class="separador-btn"></div>
+    </section>
+
+    <section class="contenedor-productos">
+      <div class="tarjeta-producto">
+        <img src="./assets/images/featured1.png" alt="" class="img-producto">
+        <div class="contenedor-detalle">
+          <button class="btn-agrega" id="btn-agrega">+</button>
+          <div class="precio-stock">
+            <h2>$14.00</h2>
+            <p>Stock: 1</p>
+          </div>
+          <p>Hoodies</p>
+        </div>
+      </div>
+      <!-- SE DEBE BORRAR porque aqui se hace la iteracion con javaScript-->
+      <div class="tarjeta-producto">
+        <img src="./assets/images/featured1.png" alt="" class="img-producto">
+        <div class="contenedor-detalle">
+          <button class="btn-agrega" id="btn-agrega">+</button>
+          <div class="precio-stock">
+            <h2>$14.00</h2>
+            <p>Stock: 1</p>
+          </div>
+          <p>Hoodies</p>
+        </div>
+      </div>
+      <div class="tarjeta-producto">
+        <img src="./assets/images/featured1.png" alt="" class="img-producto">
+        <div class="contenedor-detalle">
+          <button class="btn-agrega" id="btn-agrega">+</button>
+          <div class="precio-stock">
+            <h2>$14.00</h2>
+            <p>Stock: 1</p>
+          </div>
+          <p>Hoodies</p>
+        </div>
+      </div>
+      <!-- SE DEBE BORRAR -->
+    </section>
+
+    <footer class="footer">
+      <div class="contenedor-footer">
+        <h2>Our Information</h2>
+        <a href="">Toluca - México</a>
+      </div>
+      <div class="contenedor-footer">
+        <h2>About Us</h2>
+        <a href="">Suport Center</a>
+        <a href="">Customer Support</a>
+        <a href="">About Us</a>
+        <a href="">Copy Right</a>
+      </div>
+      <div class="contenedor-footer">
+        <h2>Product</h2>
+        <a href="">Hoodies</a>
+        <a href="">Shirts</a>
+        <a href="">Sweatshirts</a>
+      </div>
+      <div class="contenedor-footer">
+        <h2>Social</h2>
+        <div class="iconos-social ">
+          <i class='bx bxl-facebook bx-sm'></i>
+          <i class='bx bxl-twitter bx-sm' ></i>
+          <i class='bx bxl-instagram bx-sm' ></i>
+        </div>
+      </div>
+
+
+    </footer>
+
+    <!-- FIN PARTE LAUTHER -->
+    
+
+    
+    <script src="./assets/js/main.js"></script>
 </body>
 </html>
