--- a/index.html
+++ b/index.html
@@ -47,6 +47,25 @@
 
     <!-- PARTE LAUTHER -->
 
+
+    <section class="contenedor-carrito hidden" id="carrito">
+      <i class='bx bx-x bx-md' id="close"></i>
+      <h2>My cart</h2>
+      <div class="carrito-1">
+      <img src="./assets/images/empty-cart.png" alt="" class="img-empty-cart">
+        <h2>Your cart is empty</h2>
+        <p>Your can add items to your car by clicking on the '+' button on the product page.</p>
+      </div>
+      <div class="carrito-2">
+        <div class="items-precio">
+          <p>0 items</p>
+          <p>$0.00</p>
+        </div>
+        <button class="btn-checkout"> <i class='bx bxs-check-shield'></i> Checkout</button>
+      </div>
+    </section>
+
+
     <section class="contenedor-categorias" id="contenedor-categorias">
         <button class="btn all-products" id="all-products">
           <h2>Show All</h2> 
