--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-
+  Hola Mundo !
     <!--========== Logo Academlo con contorno ==========-->
     <!-- 
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48.92 56.48">
