--- a/index.html
+++ b/index.html
@@ -31,14 +31,121 @@
     <span class="span-header">$14.00</span>
     <div class="contenedor-btn-header">Botones</div>
   </header>
+
+  
   <section class="section">
-    <div class="container-section">
-      ZONA SECTION
-    </div>
+    <!-- PARTE LAUTHER -->
+    <section class="contenedor-carrito hidden" id="carrito">
+      <i class='bx bx-x bx-md' id="close"></i>
+      <h2>My cart</h2>
+      <div class="carrito-1">
+      <img src="./assets/images/empty-cart.png" alt="" class="img-empty-cart">
+        <h2>Your cart is empty</h2>
+        <p>Your can add items to your car by clicking on the '+' button on the product page.</p>
+      </div>
+      <div class="carrito-2">
+        <div class="items-precio">
+          <p>0 items</p>
+          <p>$0.00</p>
+        </div>
+        <button class="btn-checkout"> <i class='bx bxs-check-shield'></i> Checkout</button>
+      </div>
+    </section>
+
+
+    <section class="contenedor-categorias" id="contenedor-categorias">
+        <button class="btn all-products" id="all-products">
+          <h2>Show All</h2> 
+          <p>show all products</p>  
+        </button>
+        <div class="separador-btn"></div>
+        <button class="btn hoodies" id="hoodies">
+          <h2>Hoodies</h2> 
+          <p>3 products</p>
+        </button>
+        <div class="separador-btn"></div>
+        <button class="btn shirts" id="shirts">
+          <h2>Shirts</h2> 
+          <p>4 prooducts</p> 
+        </button>
+        <div class="separador-btn"></div>
+        <button class="btn sweatshirts" id="sweatshirts">
+          <h2>Sweatshirts</h2>
+          <p>4 products</p> 
+        </button>
+        <div class="separador-btn"></div>
+    </section>
+
+    <section class="contenedor-productos">
+      <div class="tarjeta-producto">
+        <img src="./assets/images/featured1.png" alt="" class="img-producto">
+        <div class="contenedor-detalle">
+          <button class="btn-agrega" id="btn-agrega">+</button>
+          <div class="precio-stock">
+            <h2>$14.00</h2>
+            <p>Stock: 1</p>
+          </div>
+          <p>Hoodies</p>
+        </div>
+      </div>
+      <!-- SE DEBE BORRAR porque aqui se hace la iteracion con javaScript-->
+      <div class="tarjeta-producto">
+        <img src="./assets/images/featured1.png" alt="" class="img-producto">
+        <div class="contenedor-detalle">
+          <button class="btn-agrega" id="btn-agrega">+</button>
+          <div class="precio-stock">
+            <h2>$14.00</h2>
+            <p>Stock: 1</p>
+          </div>
+          <p>Hoodies</p>
+        </div>
+      </div>
+      <div class="tarjeta-producto">
+        <img src="./assets/images/featured1.png" alt="" class="img-producto">
+        <div class="contenedor-detalle">
+          <button class="btn-agrega" id="btn-agrega">+</button>
+          <div class="precio-stock">
+            <h2>$14.00</h2>
+            <p>Stock: 1</p>
+          </div>
+          <p>Hoodies</p>
+        </div>
+      </div>
+      <!-- SE DEBE BORRAR -->
+    </section>
   </section>
+
+
   <footer class="footer">
-    ZONA FOOTER
-  </footer>
+      <div class="contenedor-footer">
+        <h2>Our Information</h2>
+        <a href="">Toluca - México</a>
+      </div>
+      <div class="contenedor-footer">
+        <h2>About Us</h2>
+        <a href="">Suport Center</a>
+        <a href="">Customer Support</a>
+        <a href="">About Us</a>
+        <a href="">Copy Right</a>
+      </div>
+      <div class="contenedor-footer">
+        <h2>Product</h2>
+        <a href="">Hoodies</a>
+        <a href="">Shirts</a>
+        <a href="">Sweatshirts</a>
+      </div>
+      <div class="contenedor-footer">
+        <h2>Social</h2>
+        <div class="iconos-social ">
+          <i class='bx bxl-facebook bx-sm'></i>
+          <i class='bx bxl-twitter bx-sm' ></i>
+          <i class='bx bxl-instagram bx-sm' ></i>
+        </div>
+      </div>
+    </footer>
+    
+    <!-- FIN PARTE LAUTHER -->
+
     <!--========== Logo Academlo con contorno ==========-->
     <!-- 
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48.92 56.48">
